--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Calculator</title>
+    <link rel="icon" href="img/calculator.ico">
+    <title>Calculator - Agustín De Sousa Mariano</title>
 </head>
 <body>
     <div class="general-container">
         <div class="calculator-container">
             <div class="calculator__display">
-
+                <div class="display__calculus-container"></div>
+                <div class="display__result-container">0</div>
             </div>
             <div class="calculator__buttons-container">
                 <button class="buttons-container__button" id="seven">7</button>
@@ -28,7 +30,7 @@
                 <button class="buttons-container__button buttons-container__special-button" id="plus">+</button>
                 <button class="buttons-container__button" id="zero">0</button>
                 <button class="buttons-container__button buttons-container__special-button" id="minus">-</button>
-                <button class="buttons-container__button buttons-container__special-button" id="divided-by">/</button>
+                <button class="buttons-container__button buttons-container__special-button" id="divided-by">&divide</button>
                 <button class="buttons-container__button buttons-container__special-button" id="equal">=</button>
             </div>
         </div>
