Cambios de logica

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="buttons-container__button" id="four">4</button>
                 <button class="buttons-container__button" id="five">5</button>
                 <button class="buttons-container__button" id="six">6</button>
-                <button class="buttons-container__button buttons-container__special-button" id="times">x</button>
+                <button class="buttons-container__button buttons-container__special-button" id="times">&times</button>
                 <button class="buttons-container__button" id="one">1</button>
                 <button class="buttons-container__button" id="two">2</button>
                 <button class="buttons-container__button" id="three">3</button>
